# RealTime3DRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  common.h  main.cpp  types.h
src/app/: CMakeLists.txt  app.cpp  app.h  app_config.cpp  app_config.h  app_model.qmodel  app_ui.cpp  app_ui.h  command_queues.h  command_server.cpp  command_server.h  command_test_client.cpp  common.h  construct.cpp  construct.h  display.cpp  display.h  failure_code.h  gui.cpp  gui.h  gui_manager.cpp  gui_manager.h  input.cpp  input.h  loaders.cpp  loaders.h  rtsp_client.cpp  rtsp_client.h
src/app/utils/: slogger.h  utils.h
src/components/: light.h  mesh.h  model.h  transform.h
src/core/: CMakeLists.txt  buffer.h  image.h  serializer.cpp  serializer.h  serializer_test.cpp  shared_queue.h
src/ecs/: CMakeLists.txt  common.h  component_array.h  component_array_test.cpp  component_manager.cpp  component_manager.h  component_manager_test.cpp  coordinator.cpp  coordinator.h  coordinator_test.cpp  default_events.h  entity_manager.cpp  entity_manager.h  entity_manager_test.cpp  event_manager.cpp  event_manager.h  event_manager_test.cpp  system_manager.cpp  system_manager.h  system_manager_test.cpp
src/events/: component_cache_invalid.h
src/systems/render_system/: CMakeLists.txt  camera.cpp  camera.h  common.h  default_primitives_renderer.cpp  default_primitives_renderer.h  frame_buffer.cpp  frame_buffer.h  gui_renderer.cpp  gui_renderer.h  mesh.h  model.cpp  model.h  point_light.h  post_processor.cpp  post_processor.h  pre_processor.cpp  pre_processor.h  render_defaults.cpp  render_defaults.h  render_system.cpp  render_system.h  render_system_model.qmodel  renderable_entity.cpp  renderable_entity.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader_config.h  texture.cpp  texture.h
src/systems/render_system/shaders/: CMakeLists.txt  config.h  cubemap.cpp  cubemap.h  flat_forward.vert  flat_forward_material.cpp  flat_forward_material.h  flat_forward_program.cpp  flat_forward_program.h  general_vs_ubo.cpp  general_vs_ubo.h  general_vs_ubo.hpp  grid_plane.cpp  grid_plane.h  gui_shader.cpp  gui_shader.h  ibl_specular_convolution.cpp  ibl_specular_convolution.h  program.cpp  program.h  skybox_shader.cpp  skybox_shader.h  texture_forward_material.cpp  texture_forward_material.h  uniform_buffer.cpp  uniform_buffer.h  visual_prep.cpp  visual_prep.h
src/systems/render_system/shaders/glsl/: CMakeLists.txt  brdf.h  config.h  cubemap.frag  cubemap.vert  flat_forward.frag  flat_forward.vert  forward_material.frag  forward_material.vert  grid_plane.frag  grid_plane.vert  gui.frag  gui.vert  ibl_brdf_integration_map.frag  ibl_diffuse_convolution.frag  ibl_specular_common.h  ibl_specular_convolution.frag  math_constants.h  pbr_common.h  skybox.frag  skybox.vert  visualprep.frag  visualprep.vert
src/systems/world_system/: CMakeLists.txt  system_test.cpp  world_object.cpp  world_object.h  world_system.cpp  world_system.h  world_system_model.qmodel
src/utils/: buffer.h  image.h  model_loader.h  slogger.h  utils.h
